assignments/PA3/cool.output
Nonterminals useless in grammar

    dummy_feature_list
    while


Terminals unused in grammar

    ERROR


State 140 conflicts: 9 shift/reduce
State 152 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS error ';' class

    7 feature_list: %empty
    8             | feature_list feature
    9             | feature_list error ';'

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | OBJECTID ':' TYPEID ASSIGN expr ';'

   14 formal: OBJECTID ':' TYPEID

   15 formal_list: formal
   16            | formal_list ',' formal

   17 expr_list: expr
   18          | expr_list ',' expr

   19 expr_list_: expr ';'
   20           | expr_list_ expr ';'
   21           | expr_list_ error ';'

   22 let: OBJECTID ':' TYPEID IN expr
   23    | OBJECTID ':' TYPEID ASSIGN expr IN expr
   24    | OBJECTID ':' TYPEID ',' let
   25    | OBJECTID ':' TYPEID ASSIGN expr ',' let
   26    | error ',' let

   27 branch: OBJECTID ':' TYPEID DARROW expr ';'

   28 branch_list: branch
   29            | branch_list branch

   30 expr: OBJECTID ASSIGN expr
   31     | expr '.' OBJECTID '(' ')'
   32     | expr '.' OBJECTID '(' expr_list ')'
   33     | expr '@' TYPEID '.' OBJECTID '(' ')'
   34     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   35     | OBJECTID '(' ')'
   36     | OBJECTID '(' expr_list ')'
   37     | IF expr THEN expr ELSE expr FI
   38     | WHILE expr LOOP expr POOL
   39     | '{' expr_list_ '}'
   40     | LET let
   41     | CASE expr OF branch_list ESAC
   42     | NEW TYPEID
   43     | ISVOID expr
   44     | expr '+' expr
   45     | expr '-' expr
   46     | expr '*' expr
   47     | expr '/' expr
   48     | '~' expr
   49     | expr '<' expr
   50     | expr LE expr
   51     | expr '=' expr
   52     | NOT expr
   53     | '(' expr ')'
   54     | OBJECTID
   55     | INT_CONST
   56     | STR_CONST
   57     | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 11 31 32 33 34 35 36 53
    ')' (41) 10 11 31 32 33 34 35 36 53
    '*' (42) 46
    '+' (43) 44
    ',' (44) 16 18 24 25 26
    '-' (45) 45
    '.' (46) 31 32 33 34
    '/' (47) 47
    ':' (58) 10 11 12 13 14 22 23 24 25 27
    ';' (59) 4 5 6 9 10 11 12 13 19 20 21 27
    '<' (60) 49
    '=' (61) 51
    '@' (64) 33 34
    '{' (123) 4 5 10 11 39
    '}' (125) 4 5 10 11 39
    '~' (126) 48
    error (256) 6 9 21 26
    CLASS (258) 4 5 6
    ELSE (259) 37
    FI (260) 37
    IF (261) 37
    IN (262) 22 23
    INHERITS (263) 5
    LET (264) 40
    LOOP (265) 38
    POOL (266) 38
    THEN (267) 37
    WHILE (268) 38
    CASE (269) 41
    ESAC (270) 41
    OF (271) 41
    DARROW (272) 27
    NEW (273) 42
    ISVOID (274) 43
    STR_CONST <symbol> (275) 56
    INT_CONST <symbol> (276) 55
    BOOL_CONST <boolean> (277) 57
    TYPEID <symbol> (278) 4 5 10 11 12 13 14 22 23 24 25 27 33 34 42
    OBJECTID <symbol> (279) 10 11 12 13 14 22 23 24 25 27 30 31 32 33 34 35 36 54
    ASSIGN (280) 13 23 25 30
    NOT (281) 52
    LE (282) 50
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3 6
    feature_list <features> (49)
        on left: 7 8 9
        on right: 4 5 8 9
    feature <feature> (50)
        on left: 10 11 12 13
        on right: 8
    formal <formal> (51)
        on left: 14
        on right: 15 16
    formal_list <formals> (52)
        on left: 15 16
        on right: 11 16
    expr_list <expressions> (53)
        on left: 17 18
        on right: 18 32 34 36
    expr_list_ <expressions> (54)
        on left: 19 20 21
        on right: 20 21 39
    let <expression> (55)
        on left: 22 23 24 25 26
        on right: 24 25 26 40
    branch <case_> (56)
        on left: 27
        on right: 28 29
    branch_list <cases> (57)
        on left: 28 29
        on right: 29 41
    expr <expression> (58)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 10 11 13 17 18 19 20 22 23 25 27 30 31 32 33 34 37 38 41 43 44 45 46 47 48 49 50 51 52 53


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . error ';' class

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error . ';' class

    ';'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error ';' . class

    CLASS  shift, and go to state 1

    class  go to state 12


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 14


State 12

    6 class: CLASS error ';' class .

    $default  reduce using rule 6 (class)


State 13

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature
    9             | feature_list . error ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 20


State 16

    9 feature_list: feature_list error . ';'

    ';'  shift, and go to state 21


State 17

   10 feature: OBJECTID . '(' ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID . ':' TYPEID ';'
   13        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


State 18

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 24


State 19

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature
    9             | feature_list . error ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 25

    feature  go to state 19


State 21

    9 feature_list: feature_list error ';' .

    $default  reduce using rule 9 (feature_list)


State 22

   10 feature: OBJECTID '(' . ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 26
    ')'       shift, and go to state 27

    formal       go to state 28
    formal_list  go to state 29


State 23

   12 feature: OBJECTID ':' . TYPEID ';'
   13        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 30


State 24

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


State 26

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 27

   10 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 33


State 28

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


State 29

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 34
    ','  shift, and go to state 35


State 30

   12 feature: OBJECTID ':' TYPEID . ';'
   13        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 36
    ';'     shift, and go to state 37


State 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 32

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 33

   10 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 39


State 34

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 40


State 35

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 41


State 36

   13 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 56


State 37

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


State 38

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


State 39

   10 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 57


State 40

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 58


State 41

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


State 42

   37 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 59


State 43

   40 expr: LET . let

    error     shift, and go to state 60
    OBJECTID  shift, and go to state 61

    let  go to state 62


State 44

   38 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 63


State 45

   41 expr: CASE . expr OF branch_list ESAC

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 64


State 46

   42 expr: NEW . TYPEID

    TYPEID  shift, and go to state 65


State 47

   43 expr: ISVOID . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 66


State 48

   56 expr: STR_CONST .

    $default  reduce using rule 56 (expr)


State 49

   55 expr: INT_CONST .

    $default  reduce using rule 55 (expr)


State 50

   57 expr: BOOL_CONST .

    $default  reduce using rule 57 (expr)


State 51

   30 expr: OBJECTID . ASSIGN expr
   35     | OBJECTID . '(' ')'
   36     | OBJECTID . '(' expr_list ')'
   54     | OBJECTID .

    ASSIGN  shift, and go to state 67
    '('     shift, and go to state 68

    $default  reduce using rule 54 (expr)


State 52

   52 expr: NOT . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 69


State 53

   48 expr: '~' . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 70


State 54

   39 expr: '{' . expr_list_ '}'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr_list_  go to state 71
    expr        go to state 72


State 55

   53 expr: '(' . expr ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 73


State 56

   13 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   31 expr: expr . '.' OBJECTID '(' ')'
   32     | expr . '.' OBJECTID '(' expr_list ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . LE expr
   51     | expr . '=' expr

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 83


State 57

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}' ';'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 84


State 58

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 85


State 59

   31 expr: expr . '.' OBJECTID '(' ')'
   32     | expr . '.' OBJECTID '(' expr_list ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   37     | IF expr . THEN expr ELSE expr FI
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . LE expr
   51     | expr . '=' expr

    THEN  shift, and go to state 86
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 60

   26 let: error . ',' let

    ','  shift, and go to state 87


State 61

   22 let: OBJECTID . ':' TYPEID IN expr
   23    | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   24    | OBJECTID . ':' TYPEID ',' let
   25    | OBJECTID . ':' TYPEID ASSIGN expr ',' let

    ':'  shift, and go to state 88


State 62

   40 expr: LET let .

    $default  reduce using rule 40 (expr)


State 63

   31 expr: expr . '.' OBJECTID '(' ')'
   32     | expr . '.' OBJECTID '(' expr_list ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   38     | WHILE expr . LOOP expr POOL
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . LE expr
   51     | expr . '=' expr

    LOOP  shift, and go to state 89
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 64

   31 expr: expr . '.' OBJECTID '(' ')'
   32     | expr . '.' OBJECTID '(' expr_list ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   41     | CASE expr . OF branch_list ESAC
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . LE expr
   51     | expr . '=' expr

    OF   shift, and go to state 90
    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82


State 65

   42 expr: NEW TYPEID .

    $default  reduce using rule 42 (expr)


State 66

   31 expr: expr . '.' OBJECTID '(' ')'
   32     | expr . '.' OBJECTID '(' expr_list ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   43     | ISVOID expr .
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . LE expr
   51     | expr . '=' expr

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 43 (expr)


State 67

   30 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 91


State 68

   35 expr: OBJECTID '(' . ')'
   36     | OBJECTID '(' . expr_list ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55
    ')'         shift, and go to state 92

    expr_list  go to state 93
    expr       go to state 94


State 69

   31 expr: expr . '.' OBJECTID '(' ')'
   32     | expr . '.' OBJECTID '(' expr_list ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . LE expr
   51     | expr . '=' expr
   52     | NOT expr .

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 52 (expr)


State 70

   31 expr: expr . '.' OBJECTID '(' ')'
   32     | expr . '.' OBJECTID '(' expr_list ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   48     | '~' expr .
   49     | expr . '<' expr
   50     | expr . LE expr
   51     | expr . '=' expr

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 48 (expr)


State 71

   20 expr_list_: expr_list_ . expr ';'
   21           | expr_list_ . error ';'
   39 expr: '{' expr_list_ . '}'

    error       shift, and go to state 95
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '}'         shift, and go to state 96
    '('         shift, and go to state 55

    expr  go to state 97


State 72

   19 expr_list_: expr . ';'
   31 expr: expr . '.' OBJECTID '(' ')'
   32     | expr . '.' OBJECTID '(' expr_list ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . LE expr
   51     | expr . '=' expr

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 98


State 73

   31 expr: expr . '.' OBJECTID '(' ')'
   32     | expr . '.' OBJECTID '(' expr_list ')'
   33     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . LE expr
   51     | expr . '=' expr
   53     | '(' expr . ')'

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ')'  shift, and go to state 99


State 74

   50 expr: expr LE . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 100


State 75

   49 expr: expr '<' . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 101


State 76

   51 expr: expr '=' . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 102


State 77

   44 expr: expr '+' . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 103


State 78

   45 expr: expr '-' . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 104


State 79

   46 expr: expr '*' . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 105


State 80

   47 expr: expr '/' . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 106


State 81

   33 expr: expr '@' . TYPEID '.' OBJECTID '(' ')'
   34     | expr '@' . TYPEID '.' OBJECTID '(' expr_list ')'

    TYPEID  shift, and go to state 107


State 82

   31 expr: expr '.' . OBJECTID '(' ')'
   32     | expr '.' . OBJECTID '(' expr_list ')'

    OBJECTID  shift, and go to state 108


State 83

   13 feature: OBJECTID ':' TYPEID ASSIGN expr ';' .

    $default  reduce using rule 13 (feature)


State 84
